style.css
:root {
  --font-color: rgb(231, 231, 231);
  --background-color: rgb(27, 27, 27);
  --darker-background-color: rgb(22, 22, 22);
  --darkest-background-color: rgb(10, 10, 10);
  --accent-color: rgb(255, 115, 0);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: var(--font-color);
  font-family: 'Raleway', sans-serif;
}

body {
  overflow-x: hidden;
  background-color: var(--background-color);
}

img {
  width: 100%;
}

p {
  font-size: 0.9rem;
}

h2 {
  font-size: 1.9rem;
  padding: 50px 0;
  text-align: center;
}

section {
  padding-top: 30px;
}

.hamburger {
  position: fixed;
  top: 40px;
  right: 20px;
  z-index: 1000000;
  cursor: pointer;
  height: 50px;
}

.line {
  width: 50px;
  height: 2px;
  background-color: var(--accent-color);
}

.line1 {
  transform: translateY(-10px);
}

.line3 {
  transform: translateY(10px);
}

nav {
  height: 100vh;
  position: fixed;
  top: 0;
  right: 0;
  width: 100%;
  transform: translateX(100%);
  transition: 500ms;
  background-color: var(--darkest-background-color);
  z-index: 1000;
}

.nav-container {
  width: 100%;
  height: 100%;
}

.nav-img {
  margin-top: 30px;
  height: 70px;
  display: flex;
  justify-content: center;
}

ul {
  display: flex;
  height: 100%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-bottom: 100px;
}

li {
  list-style: none;
  margin: 30px 0;
  display: flex;
  flex-direction: column;
}

.nav-link,
.nav-line {
  transition: 500ms;
}

.nav-line {
  width: 0;
  margin-top: 10px;
}

li:hover .nav-link {
  color: var(--accent-color);
}

li:hover .nav-line {
  width: 80%;
  height: 2px;
  border-radius: 2px;
  background-color: var(--accent-color);
  transform-origin: center;
}

nav a {
  text-decoration: none;
  font-size: 2rem;
}

.active {
  transform: translateY(0);
}

header {
  background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
    url('img/header.jpg') no-repeat -300px;
  background-size: cover;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.header-img {
  width: 80%;
  margin-bottom: 20px;
}

.header-banner {
  font-weight: 300;
  font-size: 1.4rem;
  margin: 0;
  padding: 0;
}

.header-a {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-decoration: none;
  position: absolute;
  top: 0;
  transform: translateY(80vh);
}

.header-a i {
  font-size: 1.3rem;
  transition: 300ms;
}

.header-a p {
  font-size: 1rem;
  transition: 300ms;
}

.header-a:hover i,
.header-a:hover p {
  color: var(--accent-color);
}

.header-a:hover i {
  transform: rotate(360deg);
}

.title {
  width: 90%;
  margin: 0 auto 30px auto;
}

.line-div {
  display: flex;
  justify-content: center;
  align-items: center;
}

.line-div i {
  font-size: 1.6rem;
  margin: 0 10px;
  color: var(--accent-color);
}

.line-div hr {
  width: 40%;
}

.about-us h3 {
  font-size: 1.5rem;
  margin: 10px 20px;
}

.about-us h4 {
  margin-bottom: 10px;
}

.about-us-desc p {
  padding: 20px;
  line-height: 120%;
}

.services {
  background: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url('img/services-bg.jpg') no-repeat;
  background-size: cover;
}

.services h3 {
  padding-top: 30px;
}

.about-us-box i {
  margin-right: 15px;
  font-size: 1.2rem;
}

.services-container {
  padding: 30px 20px;
  width: 100%;
  line-height: 120%;
}

.team {
  background-color: var(--darker-background-color);
}

.team-people {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.team-person {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 20px;
  width: 75%;
}

.team-img {
  width: 40%;
  border-radius: 50%;
}

.team-img img {
  border-radius: 50%;
}

.team-desc {
  text-align: center;
}

.team-desc .name {
  font-weight: 600;
}

.team-desc p {
  font-size: 1.1rem;
  margin: 10px;
}

.swiper-slide {
  cursor: grab;
}

.photos-content img {
  margin: 20px 0 0 0;
}

.pricing {
  background-color: var(--darker-background-color);
}

.card {
  border: 1px solid white;
  border-radius: 10px;
  background-color: rgba(255, 255, 255, 0.3);
  margin: 10px auto;
  width: 85%;
  padding: 20px;
}

.pricing-service-name {
  font-size: 1.1rem;
  color: var(--accent-color);
  font-weight: 600;
}

.pricing-price {
  font-size: 1.8rem;
  margin: 0 0 20px 0;
}

.pricing-desc {
  margin: 20px 0;
}

button {
  margin: 10px 0;
  border-radius: 20px;
  padding: 7px 10px;
  outline: none;
  color: var(--accent-color);
  border: 2px solid var(--accent-color);
  width: 70%;
  background-color: transparent;
}

button:hover {
  background-color: var(--accent-color);
  color: var(--font-color);
  transition: 300ms;
}

form {
  display: flex;
  flex-direction: column;
}

.form-content {
  width: 90%;
  margin: 0 auto;
}

.form-name {
  display: flex;
  flex-direction: column;
}

input,
textarea {
  padding: 5px;
}

label {
  margin-top: 20px;
}

.contact-btn {
  margin: 50px auto 0 auto;
}

footer {
  padding: 10px;
  background-color: var(--accent-color);
  margin-top: 50px;
}

footer p,
footer i,
footer a {
  color: var(--background-color);
}

.footer-title {
  margin: 20px 0;
  font-size: 1.3rem;
  font-weight: 600;
}

footer p {
  margin: 10px 0;
}

.copyright {
  margin: 20px 0;
}

@media only screen and (min-width: 375px) {
  h2 {
    font-size: 2.2rem;
  }

  .header-a i {
    font-size: 1.6rem;
  }
}

@media only screen and (min-width: 420px) {
  h2 {
    font-size: 3rem;
    font-weight: 600;
  }

  .header-img {
    width: 70%;
  }

  .header-banner {
    font-size: 2rem;
  }

  .title i {
    font-size: 2rem;
  }

  .team-people {
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
  }

  .team-person {
    width: 40%;
  }

  .card {
    width: 75%;
  }
}

@media only screen and (min-width: 768px) {
  nav {
    position: fixed;
    transform: translateY(0);
    height: 60px;
  }

  .nav-img {
    height: 30px;
    margin: 0;
  }

  .nav-img img {
    height: 100%;
  }

  .hamburger {
    display: none;
  }

  .nav-container {
    display: flex;
    width: 90%;
    margin: 0 auto;
    justify-content: space-between;
    align-items: center;
  }

  ul {
    width: 60%;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    height: 100%;
    padding-bottom: 0;
  }

  nav a {
    font-size: 1rem;
  }

  header {
    background: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
      url('img/header.jpg') no-repeat -250px;
    background-size: cover;
  }

  .header-img {
    width: 50%;
  }

  .about-us h3 {
    font-size: 2.2rem;
    font-weight: 400;
  }

  .about-us-box {
    width: 80%;
    display: flex;
    flex-wrap: wrap;
    margin: 0 auto;
    padding-bottom: 30px;
  }

  .about-us .text-md-center {
    width: 70%;
    line-height: 170%;
    text-align: center;
    margin: 10px auto;
  }

  .bb {
    border-bottom: 1px solid var(--font-color);
  }

  .bl {
    border-left: 1px solid var(--font-color);
  }

  .service-row {
    display: flex;
  }

  .services-container {
    width: 50%;
  }

  .swiper-slide {
    padding: 0 10vw;
    margin: 30px 0;
  }

  .pricing-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    width: 80%;
    margin: 0 auto;
  }

  .card {
    width: 45%;
    margin: 20px 0;
  }

  .footer-content {
    display: flex;
    justify-content: space-evenly;
    padding-bottom: 40px;
  }

  .footer-credits {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
}

@media only screen and (min-width: 1024px) {
  h2 {
    font-size: 3.5rem;
  }

  p {
    font-size: 1rem;
  }

  header {
    background: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
      url('img/header.jpg') no-repeat;

    background-size: cover;
  }

  .header-a i {
    font-size: 2rem;
  }

  .header-a p {
    font-size: 1.2rem;
  }

  .about-us h3 {
    font-size: 3rem;
    padding: 40px 0;
  }

  .services-container {
    padding: 30px;
  }

  .text-md-center {
    width: 50%;
    margin: 60px;
  }

  .services-container h4 {
    font-size: 1.8rem;
    margin-bottom: 30px;
    font-weight: 500;
    display: flex;
    align-items: center;
  }

  .about-us-box i {
    font-size: 1.5rem;
  }

  .about-us-box p {
    line-height: 150%;
  }

  .swiper-slide {
    padding: 0 15vw;
  }

  .pricing-service-name {
    font-size: 1.5rem;
    margin-bottom: 20px;
  }

  .pricing-desc {
    margin: 20px 0;
    width: 30ch;
  }

  .contact {
    padding-bottom: 50px;
  }

  .form-content {
    width: 70%;
    margin-top: 100px;
  }

  label {
    margin-bottom: 15px;
  }

  .form-name {
    flex-direction: row;
    align-items: center;
    width: 100%;
  }

  .form-name label {
    margin: 0;
    margin: 0 6px;
    width: 10ch;
  }

  .form-name input {
    width: calc((100% - 15ch) / 2);
  }
}

@media only screen and (min-width: 1440px) {
  nav {
    height: 65px;
  }

  nav ul li a {
    font-size: 1.2rem;
  }

  button {
    padding: 12px 0;
    border-radius: 50px;
    font-size: 1.2rem;
  }

  .nav-img {
    height: 40px;
  }

  .header-img {
    width: 30%;
  }

  .header-banner {
    font-size: 3rem;
  }

  .header-a i {
    font-size: 2.5rem;
  }

  .header-a p {
    font-size: 1.3rem;
  }

  .about-us-box {
    padding: 10px 10px 100px 10px;
  }

  .about-us h3 {
    padding: 70px 0 30px 50px;
  }

  .team-people {
    flex-wrap: nowrap;
    padding-bottom: 100px;
    padding-top: 40px;
  }

  .team-person .team-img {
    width: 40%;
  }

  .team-desc .name {
    font-size: 1.4rem;
    margin-bottom: 25px;
  }

  .team-desc p {
    margin-bottom: 10px;
    font-size: 1.1rem;
  }

  .swiper-slide {
    padding: 0 20vw;
  }

  .inquire-btn {
    padding: 10px;
    width: 40%;
    font-size: 1rem;
  }

  .contact-btn {
    width: 50%;
  }
}

@media only screen and (min-width: 1920px) {
  header {
    background-size: cover;
  }
}

